--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light" style="background-color:aquamarine">
+        <div class="container">
+              <nav class="navbar navbar-expand-sm navbar-light" style="background-color:aquamarine">
         <a class="navbar-brand" href="welcome">
             <img src="static/index.png" alt="">
             Personal Gallery
@@ -23,22 +24,26 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mynav">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+
         <div class="collapse navbar-collapse" id="mynav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="welcome">Home</a>
+                    <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="welcome">Contact</a>
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="welcome">About</a>
+                    <a class="nav-link" href="#">About</a>
                 </li>
             </ul>
         </div>
+      </div>
+
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="jumbotron">
             {% for image in images %}
             <div class="card-deck">
