--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -41,7 +41,13 @@
       </div>
 
     </nav>
+    <div class="jumbotron jumbotron-fluid bg-info text-white text-center" style="background:#aaa;">
+      <div class="container">
+        <h1 class="display-1">Welcome to my Personal Gallery</h1>
+        <p class="lead">Different Images and From Different Locations</p>
 
+      </div>
+    </div>
     <div class="container text-muted">
         <div class="jumbotron">
             <div class="row">
