--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -53,15 +53,14 @@
             <!-- <div class="row-fluid">
               <div class="col-md-6 col-lg-3"> -->
               <div class="card-group">
-
                 {% for image in images %}
-                    <div class="card">
-                      <img src="{{ image.image.url }}" class="card-img-top img-fluid">
-                      <div class="card-block">
+                    <div class="card" style="width-400px">
+                      <img src="{{ image.image.url }}" class="card-img-top">
+                      <!-- <div class="card-block"> -->
                         <h3 class="card-title">{{ image.image_name}}</h3>
                         <div class="card-body">{{ image.image_description}}</div>
                     </div>
-                </div>
+                <!-- </div> -->
                 {% endfor %}
               </div>
 
