--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -54,7 +54,7 @@
               <div class="col-md-6 col-lg-3"> -->
               <div class="card-group">
                 {% for image in images %}
-                    <div class="card" style="width-400px">
+                    <div class="card w-100" style="width-500px">
                       <img src="{{ image.image.url }}" class="card-img-top">
                       <!-- <div class="card-block"> -->
                         <h3 class="card-title">{{ image.image_name}}</h3>
