Add some functionality

--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -61,7 +61,7 @@
         <h2 style="text-align: left ; font-family: 'Marck Script', cursive; font-size: 50px;"><strong>Location :
           </strong>{{img.location}} </h2>
         <input type="text" id="{{image.id}}" class="form-control input-sm"
-          value="https://galari.herokuapp.com{{image.image.url}}">
+          value="https://jinka-gallery.herokuapp.com{{image.image.url}}">
         <button class="btn btn-primary" onclick="CopyFunction('{{image.id}}')">
           <i class="fa fa-copy" style="color: #d6962c"></i> Copy Link
         </button>
