--- a/gallery/templates/search.html
+++ b/gallery/templates/search.html
@@ -1,22 +1,27 @@
-<div class="container">
+
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+<div class="container"style="font-family: 'Marck Script', cursive;  color: ghostwhite ">
 
   <div class="row">
     {% if images%}
-      <h2>Found {{ images|length }} of searched term {{message}}</h2>
+      <h2 style="font-size: 50px;">Found {{ images|length }} pictures under {{message}}</h2>
     {% else %}
-      <h2> Found 0 articles for the search term {{message}}</h2>
+      <h2 style="font-size: 50px;" > Found 0 images  {{message}}</h2>
     {% endif %}
 
   </div>
 
   <div class="row">
 
-  {% if articles %}
-    {% for image in images %}
-      <div class="col-sm-6 col-md-3">
-          <h1>{{image.image}}</h1>
-      </div>
-    {% endfor %}
+  {% if images %}
+  {% for img in images %}
+  <div class="col-md-3 col-sm-4 col-xs-12 single_portfolio_text"><img src="{{img.image.url}}"  style="width: 400px; height:300px;margin-bottom: 25px;border-radius: 20%" class="img-responsive" alt="Image"></div>
+  
+  {% endfor %}
   {% endif %}
   </div>
 </div>
+
+{% endblock %}
