--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -12,8 +12,9 @@
   {% block styles %}
     {% bootstrap_css %}
   
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-    
+    <!-- <link rel="stylesheet" href="{% static 'styles.css' %}"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  </head>
   {% endblock %}
 
 </head>
@@ -25,7 +26,10 @@
      <!-- <h1 class='text-center'>Gallerry</h1> -->
      {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      {% bootstrap_javascript %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+          {% bootstrap_javascript %}
      {% endblock %}
 </body>
 </html>
