--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -1,74 +1,54 @@
 {% extends "base.html" %}
-{% load static%}
-{% load bootstrap3 %}
-{% block styles %}
-{% bootstrap_css %}
-{% endblock %}
-
-{% include "navbar.html" %}
-
+{% load static %}
 {% block content %}
 <script>
-  function CopyFunction(imagelink) {
-    var copyText = document.getElementById(imagelink);
+  function CopyUrl(imageAddress) {
+    var copyText = document.getElementById(imageAddress);
     copyText.select();
     document.execCommand("copy");
     alert("Copied the text: " + copyText.value);
   }
 </script>
 
-<script>
-  // Get the modal
-  var modal = document.getElementById('myModal');
-
-  // Get the image and insert it inside the modal - use its "alt" text as a caption
-  var img = document.getElementById('myImg');
-  var modalImg = document.getElementById("img02");
-  var captionText = document.getElementById("caption");
-  img.onclick = function () {
-    modal.style.display = "block";
-    modalImg.src = this.src;
-    captionText.innerHTML = this.alt;
-  }
-</script>
-
-{{ block.super }}
+<div class="container">
+  <div class="row">
 {% for image in images %}
-<div class="col-md-6 col-lg-3" style="width:30%;display:inline-block">
-  <img src="{{ image.image.url }}" data-toggle="modal" data-target="#myModal{{image.id}}"
-    style="width:100%;max-width:300px">
+    <div class="col-md-3 col-sm-4 col-xs-12 single_portfolio_text">
+  <img src="{{ image.image.url }}" data-toggle="modal" data-target="#myModal{{image.id}}" style="width: 400px; height:300px;margin-bottom: 25px;border-radius: 20%" class="img-responsive" alt="Image">
   <div class="card-body">{{ image.image_description}}</div>
 </div>
 {% endfor %}
-{% for image in images %}
-<!-- Modal -->
-<div class="modal fade" id="myModal{{image.id}}" role="dialog">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title" style="font-family: 'Marck Script', cursive; font-size: 50px; "><strong>Name :
-          </strong>{{image.image_name}} </h4>
-      </div>
-      <div class="modal-body">
-        <img src="{{image.image.url}}" style="border-radius: 20%" class="img-responsive" alt="Image">
+{%  for image in images %}
+  <!-- Modal -->
+  <div class="modal fade" id="myModal{{image.id}}" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title" style="font-family: 'Marck Script', cursive; font-size: 50px; "><strong>Name : </strong>{{image.image_name}} </h4>
+        </div>
+        <div class="modal-body">
+                <img src="{{image.image.url}}" style="border-radius: 20%" class="img-responsive" alt="Image">
 
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <h2 style="text-align: left ; font-family: 'Marck Script', cursive; font-size: 50px;"><strong>Description :
-          </strong>{{img.description}} </h2>
-        <h2 style="text-align: left ; font-family: 'Marck Script', cursive; font-size: 50px;"><strong>Location :
-          </strong>{{img.location}} </h2>
-        <input type="text" id="{{image.id}}" class="form-control input-sm"
-          value="https://jinka-gallery.herokuapp.com{{image.image.url}}">
-        <button class="btn btn-primary" onclick="CopyFunction('{{image.id}}')">
-          <i class="fa fa-copy" style="color: #d6962c"></i> Copy Link
-        </button>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <h2 style="text-align: left ; font-family: 'Marck Script', cursive; font-size: 50px;"><strong>Description : </strong>{{image.image_description}} </h2>
+          <h2 style="text-align: left ; font-family: 'Marck Script', cursive; font-size: 50px;"><strong>Location : </strong>{{imege.image_location}} </h2>
+          <input type="text" id="{{image.id}}" class="form-control input-sm" value="https://jinka-gallery.herokuapp.com{{image.image.url}}">
+                            <button class="btn btn-primary" onclick="CopyFunction('{{image.id}}')">
+                                <i class="fa fa-copy" style="color: #d6962c"></i> Copy Link
+                            </button>
+        </div>
       </div>
     </div>
   </div>
 </div>
-</div>
+
+
 {% endfor %}
+
+</div>
+
+</div>
 {% endblock %}
