--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -12,7 +12,7 @@
     <form class="navbar-form" role="search" action="{% url 'search_results' %}">
 
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search Article" name="article">
+        <input type="text" class="form-control" placeholder="Search Article" name="image">
         <div class="input-group-btn">
           <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
